--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 
     <title>Натяжные потолки Сокол</title>
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="container">
             <div class="row">
-                <img src="img/logo sokol2.png" alt="Логотип">
+                <img src="img/logo sokol.png" alt="Логотип">
                 <nav class="nav">
                     <a href="#" class="nav__links">Как мы работаем</a>
                     <a href="#" class="nav__links">Наши работы</a>
@@ -28,8 +28,23 @@
                 </div> 
             </div>
         </div>    
+    </header>
 
+<!-- Main Offer -->
+    <main class="main-offer">
+        <div class="container">
+            <div class="container__inner">
+                <div class="calc">
 
-    </header>    
+                </div>
+                <div class="main-offer-text">
+                    <h1 class="offertext">Натяжные потолки</h1>
+                    <h2 class="offerlocation">в пензе и пензенской области <br>по самым низким ценам</h2>
+                    <p class="offerfeature">с 2007 года</p>
+                    <button class="button">вызвать замерщика<br>это бесплатно</button>
+                </div>
+            </div>
+        </div>
+    </main> 
 </body>
 </html>
