--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 </div>
                 <div class="main-offer-text">
                     <h1 class="offertext">Натяжные потолки</h1>
-                    <h2 class="offerlocation">в пензе и пензенской области <br>по самым низким ценам</h2>
-                    <p class="offerfeature">с 2007 года</p>
+                    <h2 class="offer">в пензе и пензенской области</h2>
+                    <h2 class="offer">по самым низким ценам</h2>
+                    <h2 class="offer">с 2007 года</h2>
                     <button class="button">вызвать замерщика<br>это бесплатно</button>
                 </div>
             </div>
